src/main/kubernetes/mongo/mongo-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
    group: plessme
  name: plessme-mongo-dpl
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      group: plessme
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo
        group: plessme
    spec:
      containers:
      - image: mongo:4.2.5-bionic
        name: mongo
        resources:
          limits:
            cpu: "1"
            memory: 2048Mi
          requests:
            cpu: "0.1"
            memory: 512Mi
        ports:
        - name: http
          containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            subPath: mongo
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dev-pvc
