src/main/kubernetes/mongo/mongo-express-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
    group: plessme
  name: plessme-mongo-express-dpl
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
      group: plessme
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo-express
        group: plessme
    spec:
      containers:
      - image: mongo-express:0.54.0
        name: mongo-express
        resources:
          limits:
            cpu: "1"
            memory: 1024Mi
          requests:
            cpu: "0.1"
            memory: 256Mi
        ports:
        - name: http
          containerPort: 8081
