src/main/kubernetes/mongo/mongo-express-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
    group: plessme
  name: plessme-mongo-express-svc
  namespace: dev
spec:
  selector:
    app: mongo-express
    group: plessme
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
