src/main/kubernetes/mongo/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
    group: plessme
  name: plessme-mongo-svc
  namespace: dev
spec:
  selector:
    app: mongo
    group: plessme
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
